Start page ready

--- a/locales.ini
+++ b/locales.ini
@@ -1,16 +1,19 @@
 [en]
 question = What would you like to do?
-engagement-extra = participate with a local community in your area.
+engagement-extra = Participate with with the global Open Knowledge Community.
 writing-intro = Ah, you love writing and you'd like to write for us!
 writing-blogposts-extra = Write and article for the main OKF Blog.
-writing-pdr-extra = Are you a public domain nerd?
+writing-extra = Write, translate, add documentation.
+coding-extra = Work on one of our many open source projects.
 coding-intro = Are you a programmer looking for a bug to fix?
-coding-ckan-extra = Want to work on the world's most commonly deployed open data platform?
 coding-recline-extra = Does fixing bugs in our data application library.
 coding-openspending-extra = Help us build the greatest spending data platform EVER.
-engagement-intro = Would you like to work with the local OKFN community?
+contribute-intro = Give your input to one of our running projects!
+census-intro = Find out what datasets are open in your country
+engagement-intro = Would you like to connect with the different OKFN communities?
 engagement-lg-start-extra = So, you want to start your own Local Group.
 engagement-lg-extra = How about joining an OKFN local group in your area?
+engagement-wg = Want to join a community with a specific interest?
 more = Tell me more
 back = I was wrong, take me back.
 credits.innerHTML = Created by <a href="http://www.joshmatthews.net">Josh Matthews</a> and modified for OKFN by <a href="http://nigelb.me">Nigel</a>. Why not <a href="http://www.github.com/jdm/asknot">make some changes</a>?
