Added new categories, removed third layer

--- a/locales.ini
+++ b/locales.ini
@@ -1,9 +1,11 @@
 [en]
 question = What would you like to do?
 engagement-extra = Participate with with the global Open Knowledge Community.
-writing-intro = Ah, you love writing and you'd like to write for us!
+writing-intro = Ah, so you love writing and translating?
 writing-blogposts-extra = Write and article for the main OKF Blog.
 writing-extra = Write, translate, add documentation.
+blog-intro = Submit a blogpost to the main Open Knowledge Foundation Blog
+writing-panton = The principles for open data in science
 coding-extra = Work on one of our many open source projects.
 coding-intro = Are you a programmer looking for a bug to fix?
 coding-recline-extra = Does fixing bugs in our data application library.
@@ -14,6 +16,7 @@ engagement-intro = Would you like to connect with the different OKFN communities
 engagement-lg-start-extra = So, you want to start your own Local Group.
 engagement-lg-extra = How about joining an OKFN local group in your area?
 engagement-wg = Want to join a community with a specific interest?
+school-intro = Help to test our data courses or lead an expedition!
 more = Tell me more
 back = I was wrong, take me back.
 credits.innerHTML = Created by <a href="http://www.joshmatthews.net">Josh Matthews</a> and modified for OKFN by <a href="http://nigelb.me">Nigel</a>. Why not <a href="http://www.github.com/jdm/asknot">make some changes</a>?
