--- a/locales.ini
+++ b/locales.ini
@@ -19,10 +19,11 @@ engagement-wg = Want to join a community with a specific interest?
 school-intro = Help to test our data courses or lead an expedition!
 more = Tell me more
 back = I was wrong, take me back.
-credits.innerHTML = Created by <a href="http://www.joshmatthews.net">Josh Matthews</a> and modified for OKFN by <a href="http://nigelb.me">Nigel</a>. Why not <a href="http://www.github.com/jdm/asknot">make some changes</a>?
+credits.innerHTML = Haven't found what you're looking for? Fill in <a href="http://okfn.org/sign-up-to-get-involved">this form</a> and we'll get in touch! <br>Created by <a href="http://www.joshmatthews.net">Josh Matthews</a> and modified for OKFN by <a href="http://nigelb.me">Nigel</a>. Why not <a href="http://www.github.com/jdm/asknot">make some changes</a>?
 negative1 = No, not interested
 negative2 = Show me something else
 negative3 = Boring
 negative4 = Pffft, whatever
 negative5 = Not my line of expertise
 negative6 = Keep going
+form = Haven't found what you're looking for? Fill in <a href="http://okfn.org/sign-up-to-get-involved">this form</a> and we'll get in touch!
