--- a/locales.ini
+++ b/locales.ini
@@ -1,6 +1,6 @@
 [en]
 question = What would you like to do?
-engagement-extra = Participate with with the global Open Knowledge Community.
+engagement-extra = Participate with the global Open Knowledge Community.
 writing-intro = Ah, so you love writing and translating?
 writing-blogposts-extra = Write and article for the main OKF Blog.
 writing-extra = Write, translate, add documentation.
